[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/font/regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://src/ui/pause_menu/pause_option_wheel.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="OptionWheel" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 88.0
margin_bottom = 25.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 33.0
margin_right = 88.0
margin_bottom = 68.0

[node name="PreviousButton" type="Button" parent="HBoxContainer"]
margin_right = 36.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
text = "P"

[node name="NextButton" type="Button" parent="HBoxContainer"]
margin_left = 44.0
margin_right = 80.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
text = "N"

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 88.0
margin_top = 5.0
margin_right = 88.0
margin_bottom = 30.0
[connection signal="pressed" from="HBoxContainer/PreviousButton" to="." method="_on_PreviousButton_pressed"]
[connection signal="pressed" from="HBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
